# scribe

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: audit.yaml
app/: config.py  main.py
app/helpers/: language.py
app/llms/: __init__.py  base_analyzer.py  gemini_client.py  ollama_client.py
app/model/: scribe.py
app/routers/: internal.py  scribe.py
app/services/: analyzer.py  tesseract.py
