[project]
name = "scribe"
version = "0.1.0"
description = "Transform handwritten notes into structured data using AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]
